--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -102,9 +102,11 @@
     display: block;
   }
   div.join > section > h2#h2jw > a {
-    padding: 10px;
+    padding: 5px;
     background-color: chocolate;
-    border-radius: 10px;
+    border-radius: 5px;
+    text-decoration: none;
+    color: white;
   }
 
   main > div.news {
